feat: configuration native package in Android

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,14 @@
-<resources>
-
-    <!-- Base application theme. -->
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
+    <style name="BootTheme" parent="Theme.SplashScreen">
+      <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+      <item name="windowSplashScreenBackground">@color/bootsplash_background</item>
+      <item name="windowSplashScreenAnimatedIcon">@mipmap/bootsplash_logo</item>
+      <item name="postSplashScreenTheme">@style/AppTheme</item>
+      <item name="windowSplashScreenAnimationDuration">500</item>
+      <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+    </style>
 </resources>
