--- a/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,29 +4,28 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.87096775"
-      android:scaleY="0.87096775"
-      android:translateX="27"
-      android:translateY="39.19355">
     <path
-        android:pathData="M3.714,10.041L2.582,11.189C1.156,12.634 1.156,14.979 2.582,16.425L16.54,30.579C17.966,32.025 20.278,32.025 21.704,30.579L22.836,29.431C24.261,27.985 24.261,25.641 22.836,24.195L8.878,10.041C7.452,8.595 5.14,8.595 3.714,10.041Z">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:startX="3.148"
-            android:startY="10.615"
-            android:endX="22.537"
-            android:endY="29.735"
-            android:type="linear">
-          <item android:offset="0" android:color="#FFFFFFFF"/>
-          <item android:offset="1" android:color="#00FFFFFF"/>
-        </gradient>
-      </aapt:attr>
+        android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:startY="49.59793"
+                android:startX="42.9492"
+                android:endY="92.4963"
+                android:endX="85.84757"
+                android:type="linear">
+                <item
+                    android:color="#44000000"
+                    android:offset="0.0" />
+                <item
+                    android:color="#00000000"
+                    android:offset="1.0" />
+            </gradient>
+        </aapt:attr>
     </path>
     <path
-        android:pathData="M19.596,10.04L18.464,11.187C17.038,12.633 17.038,14.978 18.464,16.424L32.422,30.578C33.848,32.024 36.16,32.024 37.586,30.578L38.718,29.43C40.144,27.984 40.144,25.64 38.718,24.194L24.76,10.04C23.334,8.594 21.022,8.594 19.596,10.04Z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M58.852,3.766L57.721,2.618C56.294,1.172 53.982,1.172 52.556,2.618L31.281,24.193C29.855,25.639 29.855,27.983 31.281,29.43L32.413,30.577C33.839,32.023 36.151,32.023 37.577,30.577L58.852,9.003C60.278,7.556 60.278,5.212 58.852,3.766Z"
-        android:fillColor="#ffffff"/>
-  </group>
+        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:fillColor="#FFFFFF"
+        android:fillType="nonZero"
+        android:strokeWidth="1"
+        android:strokeColor="#00000000"/>
 </vector>
